crates/virgl/src/bindings.rs

/* automatically generated by rust-bindgen 0.72.1 */

#![allow(dead_code)]
#![allow(nonstandard_style)]

pub const VIRGL_RENDERER_VENUS: u32 = 64;
pub const VIRGL_RENDERER_NO_VIRGL: u32 = 128;
pub const VIRGL_RENDERER_USE_GUEST_VRAM: u32 = 16384;
pub const VIRGL_RENDERER_BLOB_FLAG_USE_MAPPABLE: u32 = 1;
pub const VIRGL_RENDERER_FENCE_FLAG_MERGEABLE: u32 = 1;
pub const VKR_RENDERER_THREAD_SYNC: u32 = 1;
pub const VKR_RENDERER_ASYNC_FENCE_CB: u32 = 2;
pub const VIRTGPU_DRM_CAPSET_VENUS: u32 = 4;
pub const virgl_resource_fd_type_VIRGL_RESOURCE_FD_DMABUF: virgl_resource_fd_type = 0;
pub const virgl_resource_fd_type_VIRGL_RESOURCE_FD_OPAQUE: virgl_resource_fd_type = 1;
pub const virgl_resource_fd_type_VIRGL_RESOURCE_FD_SHM: virgl_resource_fd_type = 2;
pub const virgl_resource_fd_type_VIRGL_RESOURCE_BUFFER: virgl_resource_fd_type = 3;
#[doc = " An opaque handle can be something like a GEM handle, from which a\n fd can be created upon demand.\n\n Renderers which use this type must implement virgl_context::export_fd\n\n Do not use this type for resources that are _BLOB_FLAG_USE_SHAREABLE,\n as the opaque handle can become invalid/stale any time outside of the\n original context."]
pub const virgl_resource_fd_type_VIRGL_RESOURCE_OPAQUE_HANDLE: virgl_resource_fd_type = 4;
#[doc = " An opaque handle can be something like a GEM handle, from which a\n fd can be created upon demand.\n\n Renderers which use this type must implement virgl_context::export_fd\n\n Do not use this type for resources that are _BLOB_FLAG_USE_SHAREABLE,\n as the opaque handle can become invalid/stale any time outside of the\n original context."]
pub const virgl_resource_fd_type_VIRGL_RESOURCE_FD_INVALID: virgl_resource_fd_type = -1;
pub type virgl_resource_fd_type = ::std::os::raw::c_int;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct virgl_resource_vulkan_info {
    pub device_uuid: [u8; 16usize],
    pub driver_uuid: [u8; 16usize],
    pub allocation_size: u64,
    pub memory_type_index: u32,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of virgl_resource_vulkan_info"]
        [::std::mem::size_of::<virgl_resource_vulkan_info>() - 48usize];
    ["Alignment of virgl_resource_vulkan_info"]
        [::std::mem::align_of::<virgl_resource_vulkan_info>() - 8usize];
    ["Offset of field: virgl_resource_vulkan_info::device_uuid"]
        [::std::mem::offset_of!(virgl_resource_vulkan_info, device_uuid) - 0usize];
    ["Offset of field: virgl_resource_vulkan_info::driver_uuid"]
        [::std::mem::offset_of!(virgl_resource_vulkan_info, driver_uuid) - 16usize];
    ["Offset of field: virgl_resource_vulkan_info::allocation_size"]
        [::std::mem::offset_of!(virgl_resource_vulkan_info, allocation_size) - 32usize];
    ["Offset of field: virgl_resource_vulkan_info::memory_type_index"]
        [::std::mem::offset_of!(virgl_resource_vulkan_info, memory_type_index) - 40usize];
};
unsafe extern "C" {
    pub fn vkr_get_capset(capset: *mut ::std::os::raw::c_void, flags: u32) -> usize;
}
unsafe extern "C" {
    pub fn vkr_renderer_fini();
}
unsafe extern "C" {
    pub fn vkr_renderer_create_context(
        ctx_id: u32,
        ctx_flags: u32,
        nlen: u32,
        name: *const ::std::os::raw::c_char,
    ) -> bool;
}
unsafe extern "C" {
    pub fn vkr_renderer_destroy_context(ctx_id: u32);
}
unsafe extern "C" {
    pub fn vkr_renderer_submit_cmd(
        ctx_id: u32,
        cmd: *mut ::std::os::raw::c_void,
        size: u32,
    ) -> bool;
}
unsafe extern "C" {
    pub fn vkr_renderer_submit_fence(ctx_id: u32, flags: u32, ring_idx: u64, fence_id: u64)
    -> bool;
}
unsafe extern "C" {
    pub fn vkr_renderer_create_resource(
        ctx_id: u32,
        res_id: u32,
        blob_id: u64,
        blob_size: u64,
        blob_flags: u32,
        out_fd_type: *mut virgl_resource_fd_type,
        out_res_fd: *mut ::std::os::raw::c_int,
        out_map_info: *mut u32,
        out_vulkan_info: *mut virgl_resource_vulkan_info,
        out_mapped_ptr: *mut *mut ::std::os::raw::c_void,
    ) -> bool;
}
unsafe extern "C" {
    pub fn vkr_renderer_destroy_resource(ctx_id: u32, res_id: u32);
}
unsafe extern "C" {
    pub fn webrogueSetVulkan(vulkan: *mut ::std::os::raw::c_void);
}
unsafe extern "C" {
    pub fn webrogueGetVulkan() -> *mut ::std::os::raw::c_void;
}
unsafe extern "C" {
    pub fn webrogue_virgl_is_impl() -> u8;
}
unsafe extern "C" {
    pub fn webrogue_virgl_stub_fn();
}
unsafe extern "C" {
    pub fn webrogue_get_host_blob(blob_id: u64) -> *mut ::std::os::raw::c_void;
}
unsafe extern "C" {
    pub fn webrogue_virgl_setup_shmem(ptr: *mut ::std::os::raw::c_void, size: usize);
}
unsafe extern "C" {
    pub fn webrogue_virgl_pop_shmem(out_size: *mut usize) -> *mut ::std::os::raw::c_void;
}
unsafe extern "C" {
    pub fn webrogue_vkr_init(
        flags: u32,
        retire_fence: ::std::option::Option<
            unsafe extern "C" fn(ctx_id: u32, ring_idx: u32, fence_id: u64),
        >,
    ) -> bool;
}
